@@ -8,28 +8,8 @@ import java.util.concurrent.Executors;
 
 @Configuration
 public class TmdbConcurrencyConfiguration {
-    @Bean(name = "pageExecutor", destroyMethod = "shutdown")
-    public ExecutorService pageExecutorService() {
-        return Executors.newFixedThreadPool(4);
-    }
-
-    @Bean(name = "movieExecutor", destroyMethod = "shutdown")
-    public ExecutorService movieExecutorService() {
-        return Executors.newFixedThreadPool(10);
-    }
-
     @Bean(name = "personExecutor", destroyMethod = "shutdown")
     public ExecutorService personExecutorService() {
-        return Executors.newFixedThreadPool(10);
-    }
-
-    @Bean(name = "castExecutor", destroyMethod = "shutdown")
-    public ExecutorService castExecutorService() {
-        return Executors.newFixedThreadPool(10);
-    }
-
-    @Bean(name = "dictionariesExecutor", destroyMethod = "shutdown")
-    public ExecutorService dictionariesExecutorService() {
-        return Executors.newFixedThreadPool(3);
+        return Executors.newVirtualThreadPerTaskExecutor();
     }
 }
